--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 </div>
 <div id="about">
 	<div class="picture left">
-		<img src="./assets/images/nina.png" alt="Portrait de Nina Carducci">
+		<img src="./assets/images/nina.jpg" alt="Portrait de Nina Carducci">
 	</div>
 	<div id="about-me">
 		<h2 class="about-me__title">A propos de moi</h3>
@@ -154,7 +154,7 @@
 			</form>
 		</div>
 		<div class="picture right">
-			<img src="./assets/images/camera.png" alt="Appareil photo en gros plan">
+			<img src="./assets/images/camera.jpg" alt="Appareil photo en gros plan">
 		</div>
 	</div>
 </div>
