modif link google font

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="./assets/style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link media="print" onload="this.onload=null;this.removeAttribute('media');" href="https://fonts.googleapis.com/css2?ampfamily=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&ampdisplay=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?ampfamily=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&ampdisplay=swap" rel="stylesheet">
 	<title>Nina Carducci - Photographe professionnelle</title>
 	<meta 
 		name="description"
