add script shema.org

--- a/index.html
+++ b/index.html
@@ -3,15 +3,40 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta 
+		name="description"
+		content="Site de Nina Carducci - Photographe professionnelle à Bordeaux">
 	<link rel="stylesheet" media="all"   href="./assets/bootstrap/bootstrap.css">
 	<link rel="stylesheet" href="./assets/style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" rel="stylesheet">
-	<title>Nina Carducci - Photographe professionnelle</title>
-	<meta 
-		name="description"
-		content="Site de Nina Carducci - Photographe professionnelle">
+	<title>Nina Carducci - Photographe professionnelle à Bordeaux</title>
+	<script type="application/ld+json">
+		{
+			"priceRange": "100 to 500$",
+		 "image": "/assets/images/nina.webp",
+		  "@context": "http://schema.org",
+		  "@type": "LocalBusiness",
+		  "name": "Nina Carbucci",
+		  "description": "Nina Carducci, photographe professionnelle à Bordeaux, vous propose de saisir ces merveilleux moments d'une vie au travers de son regard et sa technique.",
+		  "address": {
+			"@type": "PostalAddress",
+			"streetAddress": "68 avenue Alsace-Lorraine",
+			"addressLocality": "Bordeaux",
+			"postalCode": "33200"
+		  },
+		  "telephone": "05 56 67 78 89",
+		  "openingHours": "Mo-Fr 10:00-19:00",
+		  "employees": [
+			{
+			  "@type": "Person",
+			  "name": "Nina Carbucci"
+			}
+		  ]
+		}
+	  </script>
+	
 	
 </head>
 <body>
