add meta twitter, fb , insta

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta 
 		name="description"
-		content="Site de Nina Carducci - Photographe professionnelle à Bordeaux">
+		content="Site de Nina Carducci - Photographe professionnelle à Bordeaux, capture vos plus beaux moments">
 	<link rel="stylesheet" media="all"   href="./assets/bootstrap/bootstrap.css">
 	<link rel="stylesheet" href="./assets/style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,12 +14,12 @@
 	<title>Nina Carducci - Photographe professionnelle à Bordeaux</title>
 	<script type="application/ld+json">
 		{
-			"priceRange": "100 to 500$",
+		 "priceRange": "100 to 500$",
 		 "image": "/assets/images/nina.webp",
 		  "@context": "http://schema.org",
 		  "@type": "LocalBusiness",
 		  "name": "Nina Carbucci",
-		  "description": "Nina Carducci, photographe professionnelle à Bordeaux, vous propose de saisir ces merveilleux moments d'une vie au travers de son regard et sa technique.",
+		  "description": "Nina Carducci, photographe professionnelle à Bordeaux.",
 		  "address": {
 			"@type": "PostalAddress",
 			"streetAddress": "68 avenue Alsace-Lorraine",
@@ -36,6 +36,26 @@
 		  ]
 		}
 	  </script>
+
+	  <!-- Twitter -->
+	  <meta name="twitter:card" content="summary_large_image" />
+	  <meta name="twitter:site" content="ninacarducci" />
+      <meta name="twitter:creator" content="ninacarducci" />
+	  <meta name="twitter:title" content="Nina Carducci, photographe professionnelle à Bordeaux" />
+	  <meta name="twitter:description"
+		content="Nina Carducci, photographe professionnelle à Bordeaux, capture vos plus beaux moments" />
+	  <meta name="twitter:image" content="/assets/images/nina.webp" />
+
+	 <!-- Open Graph meta (Facebook, Instagram, Linkedin) -->
+
+	  <meta property="og:title" content="Nina Carducci, photographe professionnelle à Bordeaux" />
+	  <meta property="og:type" content="Site de photographie" />
+	  <meta property="og:url" content="https://ninacarducci.github.io/" />
+	  <meta property="og:image" content="/assets/images/nina.webp" />
+	  <meta property="og:site_name" content="Site de photographie de Nina Carducci" />
+	  <meta property="og:description"
+		content="Nina Carducci, photographe professionnelle à Bordeaux, capture vos plus beaux moments" />
+	  <meta property="author" content="Nina Carducci" />
 	
 	
 </head>
